Update app CI/CD

--- a/ci-cd/confd/node/templates/Dockerfile.tmpl
+++ b/ci-cd/confd/node/templates/Dockerfile.tmpl
@@ -1,6 +1,6 @@
 ARG SKIP_TESTS=false
 
-FROM node:{{ getenv ENGINE_VERSION }}-alpine as builder
+FROM node:{{ getenv "ENGINE_VERSION" }}-alpine as builder
 
 WORKDIR /app
 
